simplify url regrex